--- a/install_apache.yml
+++ b/install_apache.yml
@@ -5,7 +5,7 @@
   tasks:
 
   - name: install apache&php packages
-    apt:
+    package:
       name: 
         - "{{ apache_package }}"
         - "{{ php_package }}"
