--- a/conditions_loops/when_condition.yml
+++ b/conditions_loops/when_condition.yml
@@ -23,7 +23,7 @@
       name: mariadb
       state: latest
       update_cache: yes
-    when: ansible_distribution == "CentOS"
+    when: ansible_distribution == "CentOS" and ansible_distribution_version == "18.04"
 
   - name: install mariadb package on Ubuntu
     tags: ubuntu,db
