add unarchive module

--- a/modules/unarchive_module.yml
+++ b/modules/unarchive_module.yml
@@ -5,3 +5,20 @@
     - unarchive:
         src: local.zip
         dest: /tmp
+    - unarchive:
+        src: /root/data.tar.gz
+        dest: /srv
+        remote_src: yes
+    - file: 
+        path: /root/data.tar.gz
+        state: absent
+
+- name: Download & extract from url
+  hosts: web1
+  tasks:
+    - unarchive:
+        src: https://github.com/kodekloudhub/Hello-World/archive/master.zip
+        dest: /root
+        remote_src: yes
+
+  
