fix mispleling in name web servers

--- a/lamp-project/lamp-stack.yml
+++ b/lamp-project/lamp-stack.yml
@@ -47,7 +47,7 @@
       shell: mysql -f < /tmp/db-load-script.sql
 
 - name: Deploy on web-servers
-  hosts: lamp-web
+  hosts: lampweb
   become: yes
   tasks:
     - name: Install httpd php
