--- a/include/include_tasks/playbook.yml
+++ b/include/include_tasks/playbook.yml
@@ -1,5 +1,6 @@
 - name: Deploy WEB & DB server
   hosts: web-db-server
   tasks:
+    - include_vars: /path/to/file/with/vars.yml
     - include_tasks: tasks/db.yml
     - include_tasks: tasks/web.yml
