--- a/lamp-project/lamp-stack.yml
+++ b/lamp-project/lamp-stack.yml
@@ -3,82 +3,16 @@
   hosts: all
   become: yes
   tasks:
-    - name: Install common dependencies
-      yum:
-        name:
-          - libselinux-python
-          - libsemanage-python
-          - firewalld
-        state: installed
+    - include_tasks: tasks/common.yml 
 
 - name: Deploy db on db-servers
   hosts: lamp-db
   become: yes
   tasks:
-    - name: Install MariaDB
-      yum:
-        name:
-          - mariadb-server
-          - MySQL-python
-        state: installed
-
-    - name: Create mysql config
-      template: src=templates/my.cnf.j2 dest=/etc/my.cnf
-
-    - name: Start mariadb service
-      service: name=mariadb state=started enabled=yes
-
-    - name: Start firewalld
-      service: name=firewalld state=started enabled=yes
-
-    - name: Add firewalld rules
-      firewalld: port={{ mysql_port }}/tcp permanent=true state=enabled immediate=yes
-
-    - name: Create DB
-      mysql_db: name={{ dbname }} state=present
-
-    - name: Create DB user
-      mysql_user: name= {{ dbuser }} password={{ dbpassword }} priv=*.*:ALL host={{ ansible_host }} state=present
-
-    - name: Move populate script to db host
-      template: src=templates/db-load-script.sql.j2 dest=/tmp/db-load-script.sql
-
-    - name: Populate DB
-      shell: mysql -f < /tmp/db-load-script.sql
+    - include_tasks: tasks/db.yml
 
 - name: Deploy on web-servers
   hosts: lampweb
   become: yes
   tasks:
-    - name: Install httpd php
-      yum:
-        name:
-          - httpd
-          - php
-          - php-mysql
-        state: present
-
-    - name: Install git
-      yum: name=git state=installed
-
-    - name: Start firewalld
-      service: name=firewalld state=started enabled=yes
-
-    - name: Add firewalld rules
-      firewalld: port={{ httpd_port }}/tcp permanent=true state=enabled immediate=yes
-
-    - name: Set index.php as default page
-      tags: "Set index.php as the default page"
-      replace:
-        path: /etc/httpd/conf/httpd.conf
-        regexp: 'DirectoryIndex index.html'
-        replace: 'DirectoryIndex index.php'
-
-    - name: Start httpd service
-      service: name=httpd state=started enabled=yes
-    
-    - name: Copy the code from repository
-      git: repo={{ repository }} dest=/var/www/html/  force=yes
-
-    - name: Creates the index.php file
-      template: src=templates/index.php.j2 dest=/var/www/html/index.php
+    - include_tasks: tasks/web.yml
