--- a/modules/firewall_module.yml
+++ b/modules/firewall_module.yml
@@ -1,9 +1,11 @@
 ---
 - hosts: web1
   tasks:
+    - yum: name=firewalld state=installed
+    - service: name=firewalld state=started
     - firewalld:
         source: 172.20.1.101
-        state: eneabled
+        state: enabled
         zone: internal
         permanent: yes
         immediate: yes
