add example of archive module

--- a/modules/archive_module.yml
+++ b/modules/archive_module.yml
@@ -17,3 +17,10 @@
           - /var/log/lastlog
         dest: /root/files.tar.bz2
         format: bz2
+
+    - name: Archive folder /opt to /root/opt.zip
+      archive:
+        path:
+          - /opt
+        dest: /root/opt.zip
+        format: zip
