--- a/playbook-flow/check-git-installed.yml
+++ b/playbook-flow/check-git-installed.yml
@@ -1,14 +1,15 @@
 ---
 - hosts: web2
   tasks:
-    - shell: dpkg -l git
+    - shell: git --version
       register: check_if_git_installed
       ignore_errors: true
 
     - debug: var=check_if_git_installed
+    
     - shell: echo 'Oops, git is missing' > /tmp/is_git_installed.txt
       when: check_if_git_installed.rc != 0
 
-    - shell: git --version > /tmp/is_git_intalled.txt
-      when: check_if_git_installed.rc == 0
-~                                             
+    #- shell: dpkg -l git
+    #  register: check_if_git_installed
+                                             
