--- a/modules/file_module.yml
+++ b/modules/file_module.yml
@@ -11,6 +11,13 @@
         owner: root
       become: yes
 
+    - name: clean directory
+      file:
+        path: "{{ item }}"
+        state: absent
+      with_fileglob:
+        - /var/www/html/*.html
+
     - name: create a path
       file:
         path: /tmp/app/1/2/3/4
